--- a/app/src/main/res/layout/activity_consist.xml
+++ b/app/src/main/res/layout/activity_consist.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/small_margin"
-        android:layout_marginLeft="@dimen/small_margin"
+        android:layout_marginStart="@dimen/small_margin"
         android:text="@string/current_town"/>
 
     <Spinner
@@ -32,7 +32,7 @@
     <ListView
         android:id="@+id/consistView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:paddingTop="@dimen/small_margin"
         android:paddingLeft="@dimen/small_margin"
@@ -43,7 +43,7 @@
         android:layout_margin="@dimen/small_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableLeft="@android:drawable/ic_menu_add"
+        android:drawableStart="@android:drawable/ic_menu_add"
         android:text="@string/button_add_pickup"/>
 
 
