--- a/app/src/main/res/layout/activity_user_type.xml
+++ b/app/src/main/res/layout/activity_user_type.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content" />
         <TextView
             android:layout_width="match_parent"
-            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
             android:layout_marginBottom="@dimen/small_margin"
             android:text="@string/user_single_desc"
             android:layout_height="wrap_content" />
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content" />
         <TextView
             android:layout_width="match_parent"
-            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
             android:layout_marginBottom="@dimen/small_margin"
             android:text="@string/user_owner_desc"
             android:layout_height="wrap_content" />
@@ -58,8 +58,8 @@
                 <AutoCompleteTextView
                     android:id="@+id/actvTest"
                     android:layout_width="match_parent"
-                    android:layout_marginLeft="@dimen/small_margin"
-                    android:hint="Owner IP Address"
+                    android:layout_marginStart="@dimen/small_margin"
+                    android:hint="@string/owner_ip_address"
                     android:inputType="number|numberDecimal"
                     android:digits="0123456789."
                     android:layout_height="wrap_content" />
@@ -68,6 +68,7 @@
 
             <ImageButton
                 android:id="@+id/btnDown"
+                android:contentDescription="@string/down_arrow"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@android:drawable/arrow_down_float"/>
@@ -75,7 +76,7 @@
         </LinearLayout>
         <TextView
             android:layout_width="match_parent"
-            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
             android:layout_marginBottom="@dimen/small_margin"
             android:text="@string/user_remote_desc"
             android:layout_height="wrap_content" />
@@ -86,7 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="OK"/>
+            android:text="@string/button_ok"/>
 
 
     </LinearLayout>
