--- a/app/src/main/res/layout/fragment_town.xml
+++ b/app/src/main/res/layout/fragment_town.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/small_margin"
-        android:layout_marginLeft="@dimen/small_margin"
+        android:layout_marginStart="@dimen/small_margin"
         android:text="@string/current_town"/>
 
     <Spinner
