--- a/app/src/main/res/layout/item_consist_list.xml
+++ b/app/src/main/res/layout/item_consist_list.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
+        android:contentDescription="@string/train_icon"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:src="@drawable/ic_train"/>
@@ -16,7 +17,6 @@
         android:layout_weight=".4"
         android:maxLines="1"
         android:ellipsize="end"
-        android:text="[name]"
         android:layout_height="wrap_content" />
 
     <TextView
@@ -24,7 +24,6 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="[description]"
         android:layout_width="0dp"
         android:layout_weight=".6"
         android:layout_height="wrap_content" />
