--- a/app/src/main/res/layout/dialog_spot_days.xml
+++ b/app/src/main/res/layout/dialog_spot_days.xml
@@ -86,8 +86,10 @@
             android:background="@android:color/darker_gray"/>
 
         <LinearLayout
+            android:id="@+id/llLadingInst"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:clickable="true"
             android:orientation="horizontal">
 
             <LinearLayout
