--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -39,6 +39,8 @@
             android:id="@+id/llSessionNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingRight="@dimen/small_margin"
+            android:paddingLeft="@dimen/small_margin"
             android:orientation="horizontal">
 
             <TextView
