--- a/app/src/main/res/layout/activity_backup_restore.xml
+++ b/app/src/main/res/layout/activity_backup_restore.xml
@@ -4,20 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.connriver.connrail.ImportExportActivity">
+    tools:context="com.connriver.connrail.BackupRestoreActivity">
 
     <Button
-        android:id="@+id/btnImport"
+        android:id="@+id/btnBackup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:text="@string/import_db"/>
+        android:text="@string/backup_db"/>
 
     <Button
-        android:id="@+id/btnExport"
+        android:id="@+id/btnRestore"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:text="@string/export_db"/>
+        android:text="@string/restore_db"/>
 
 </LinearLayout>
