--- a/app/src/main/res/layout/activity_yard_list.xml
+++ b/app/src/main/res/layout/activity_yard_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.connriver.connrail.YardListActivity">
+    tools:context="com.connriverlines.connrail.YardListActivity">
 
     <TextView
         android:id="@+id/tvCurrLoc"
