--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.connriver.connrail.AboutActivity">
+    tools:context="com.connriverlines.connrail.AboutActivity">
 
     <TextView
         android:layout_marginTop="@dimen/activity_vertical_margin"
@@ -15,6 +15,7 @@
         android:text="@string/app_name" />
 
     <TextView
+        android:id="@+id/about_version"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
@@ -23,7 +24,6 @@
         android:text="@string/about_version" />
 
     <TextView
-        android:id="@+id/aboutText"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
