--- a/app/src/main/res/layout/activity_car_info.xml
+++ b/app/src/main/res/layout/activity_car_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.connriver.connrail.CarInfoActivity"
+    tools:context="com.connriverlines.connrail.CarInfoActivity"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
