--- a/app/src/main/res/layout/activity_car_status.xml
+++ b/app/src/main/res/layout/activity_car_status.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.connriver.connrail.CarLocationListActivity">
+    tools:context="com.connriverlines.connrail.CarLocationListActivity">
 
     <CheckBox
         android:id="@+id/cbShowStored"
