--- a/app/src/main/res/layout/activity_spot_add_edit.xml
+++ b/app/src/main/res/layout/activity_spot_add_edit.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.connriver.connrail.SpotAddEditActivity"
+    tools:context="com.connriverlines.connrail.SpotAddEditActivity"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
