--- a/app/src/main/res/layout/dialog_car_list.xml
+++ b/app/src/main/res/layout/dialog_car_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.connriver.connrail.CarList">
+    tools:context="com.connriverlines.connrail.CarList">
 
     <ListView
         android:id="@+id/carListView"
