--- a/app/src/main/res/layout/fragment_town.xml
+++ b/app/src/main/res/layout/fragment_town.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.connriver.connrail.TownFragment">
+    tools:context="com.connriverlines.connrail.TownFragment">
 
     <TextView
         android:id="@+id/tvCurrLoc"
