--- a/app/src/main/res/layout/item_alert_list.xml
+++ b/app/src/main/res/layout/item_alert_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    tools:context="com.connriver.connrail.CarLocationListActivity"
+    tools:context="com.connriverlines.connrail.CarLocationListActivity"
     tools:ignore="UseCompoundDrawables">
 
 
